crates/cistell-core/tests/ui/missing_group.stderr
error: #[config(group = "...")] is required on the struct
 --> tests/ui/missing_group.rs:4:1
  |
4 | #[config(prefix = "APP")]
  | ^
